Add filter for searching

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
 
-    <SearchView
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/search_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/sort_list_button"
@@ -35,8 +35,10 @@
         android:id="@+id/sort_radio_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="340dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/user_list"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/sort_list_button"
         app:layout_constraintTop_toBottomOf="@+id/search_view">
 
